tests/snapshots/parse__tests__hir_basic_example.snap
---
source: tests/parse.rs
expression: hir
---
HirProgram {
    [salsa id]: Id(1800),
    functions: {
        "main": HirFunction {
            [salsa id]: Id(1400),
            name: "main",
            params: [],
            body: [
                HirExpr {
                    [salsa id]: Id(1000),
                    expr: Call {
                        func: (
                            Variable(
                                "print_line",
                            ),
                            Span {
                                start: 262,
                                end: 291,
                            },
                        ),
                        args: [
                            (
                                StringInterpolation(
                                    StringInterpolation {
                                        leading_text: "Hello, Tribute!",
                                        segments: [],
                                    },
                                ),
                                Span {
                                    start: 273,
                                    end: 290,
                                },
                            ),
                        ],
                    },
                    span: Span {
                        start: 262,
                        end: 291,
                    },
                },
                HirExpr {
                    [salsa id]: Id(1001),
                    expr: Call {
                        func: (
                            Variable(
                                "print_line",
                            ),
                            Span {
                                start: 296,
                                end: 314,
                            },
                        ),
                        args: [
                            (
                                Call {
                                    func: (
                                        Variable(
                                            "+",
                                        ),
                                        Span {
                                            start: 307,
                                            end: 313,
                                        },
                                    ),
                                    args: [
                                        (
                                            Number(
                                                10,
                                            ),
                                            Span {
                                                start: 307,
                                                end: 309,
                                            },
                                        ),
                                        (
                                            Number(
                                                5,
                                            ),
                                            Span {
                                                start: 312,
                                                end: 313,
                                            },
                                        ),
                                    ],
                                },
                                Span {
                                    start: 307,
                                    end: 313,
                                },
                            ),
                        ],
                    },
                    span: Span {
                        start: 296,
                        end: 314,
                    },
                },
                HirExpr {
                    [salsa id]: Id(1002),
                    expr: Call {
                        func: (
                            Variable(
                                "*",
                            ),
                            Span {
                                start: 319,
                                end: 324,
                            },
                        ),
                        args: [
                            (
                                Number(
                                    6,
                                ),
                                Span {
                                    start: 319,
                                    end: 320,
                                },
                            ),
                            (
                                Number(
                                    7,
                                ),
                                Span {
                                    start: 323,
                                    end: 324,
                                },
                            ),
                        ],
                    },
                    span: Span {
                        start: 319,
                        end: 324,
                    },
                },
            ],
            span: Span {
                start: 246,
                end: 326,
            },
        },
    },
    main: Some(
        "main",
    ),
}
