tests/snapshots/parse__tests__hir_calc_example.snap
---
source: tests/parse.rs
expression: hir
---
HirProgram {
    [salsa id]: Id(1800),
    functions: {
        "main": HirFunction {
            [salsa id]: Id(1400),
            name: "main",
            params: [],
            body: [
                HirExpr {
                    [salsa id]: Id(1000),
                    expr: Call {
                        func: (
                            Variable(
                                "print_line",
                            ),
                            SimpleSpan {
                                start: 201,
                                end: 253,
                                context: (),
                            },
                        ),
                        args: [
                            (
                                String(
                                    "Calculator example - to be implemented",
                                ),
                                SimpleSpan {
                                    start: 212,
                                    end: 252,
                                    context: (),
                                },
                            ),
                        ],
                    },
                    span: SimpleSpan {
                        start: 201,
                        end: 253,
                        context: (),
                    },
                },
                HirExpr {
                    [salsa id]: Id(1001),
                    expr: Call {
                        func: (
                            Variable(
                                "print_line",
                            ),
                            SimpleSpan {
                                start: 258,
                                end: 319,
                                context: (),
                            },
                        ),
                        args: [
                            (
                                String(
                                    "Requires pattern matching and string operations",
                                ),
                                SimpleSpan {
                                    start: 269,
                                    end: 318,
                                    context: (),
                                },
                            ),
                        ],
                    },
                    span: SimpleSpan {
                        start: 258,
                        end: 319,
                        context: (),
                    },
                },
            ],
            span: SimpleSpan {
                start: 185,
                end: 321,
                context: (),
            },
        },
    },
    main: Some(
        "main",
    ),
}
