tests/snapshots/parse__tests__hir_functions_example.snap
---
source: tests/parse.rs
expression: hir
---
HirProgram {
    [salsa id]: Id(1800),
    functions: {
        "add": HirFunction {
            [salsa id]: Id(1400),
            name: "add",
            params: [
                "x",
                "y",
            ],
            body: [
                HirExpr {
                    [salsa id]: Id(1000),
                    expr: Call {
                        func: (
                            Variable(
                                "+",
                            ),
                            Span {
                                start: 266,
                                end: 271,
                            },
                        ),
                        args: [
                            (
                                Variable(
                                    "x",
                                ),
                                Span {
                                    start: 266,
                                    end: 267,
                                },
                            ),
                            (
                                Variable(
                                    "y",
                                ),
                                Span {
                                    start: 270,
                                    end: 271,
                                },
                            ),
                        ],
                    },
                    span: Span {
                        start: 266,
                        end: 271,
                    },
                },
            ],
            span: Span {
                start: 247,
                end: 273,
            },
        },
        "main": HirFunction {
            [salsa id]: Id(1401),
            name: "main",
            params: [],
            body: [
                HirExpr {
                    [salsa id]: Id(1001),
                    expr: Call {
                        func: (
                            Variable(
                                "print_line",
                            ),
                            Span {
                                start: 291,
                                end: 336,
                            },
                        ),
                        args: [
                            (
                                String(
                                    "Testing user-defined functions:",
                                ),
                                Span {
                                    start: 302,
                                    end: 335,
                                },
                            ),
                        ],
                    },
                    span: Span {
                        start: 291,
                        end: 336,
                    },
                },
                HirExpr {
                    [salsa id]: Id(1002),
                    expr: Call {
                        func: (
                            Variable(
                                "print_line",
                            ),
                            Span {
                                start: 341,
                                end: 364,
                            },
                        ),
                        args: [
                            (
                                Call {
                                    func: (
                                        Variable(
                                            "add",
                                        ),
                                        Span {
                                            start: 352,
                                            end: 363,
                                        },
                                    ),
                                    args: [
                                        (
                                            Number(
                                                10,
                                            ),
                                            Span {
                                                start: 356,
                                                end: 358,
                                            },
                                        ),
                                        (
                                            Number(
                                                20,
                                            ),
                                            Span {
                                                start: 360,
                                                end: 362,
                                            },
                                        ),
                                    ],
                                },
                                Span {
                                    start: 352,
                                    end: 363,
                                },
                            ),
                        ],
                    },
                    span: Span {
                        start: 341,
                        end: 364,
                    },
                },
                HirExpr {
                    [salsa id]: Id(1003),
                    expr: Call {
                        func: (
                            Variable(
                                "print_line",
                            ),
                            Span {
                                start: 369,
                                end: 409,
                            },
                        ),
                        args: [
                            (
                                String(
                                    "Testing nested arithmetic:",
                                ),
                                Span {
                                    start: 380,
                                    end: 408,
                                },
                            ),
                        ],
                    },
                    span: Span {
                        start: 369,
                        end: 409,
                    },
                },
                HirExpr {
                    [salsa id]: Id(1004),
                    expr: Call {
                        func: (
                            Variable(
                                "print_line",
                            ),
                            Span {
                                start: 414,
                                end: 440,
                            },
                        ),
                        args: [
                            (
                                Call {
                                    func: (
                                        Variable(
                                            "+",
                                        ),
                                        Span {
                                            start: 425,
                                            end: 439,
                                        },
                                    ),
                                    args: [
                                        (
                                            Call {
                                                func: (
                                                    Variable(
                                                        "*",
                                                    ),
                                                    Span {
                                                        start: 425,
                                                        end: 430,
                                                    },
                                                ),
                                                args: [
                                                    (
                                                        Number(
                                                            3,
                                                        ),
                                                        Span {
                                                            start: 425,
                                                            end: 426,
                                                        },
                                                    ),
                                                    (
                                                        Number(
                                                            4,
                                                        ),
                                                        Span {
                                                            start: 429,
                                                            end: 430,
                                                        },
                                                    ),
                                                ],
                                            },
                                            Span {
                                                start: 425,
                                                end: 430,
                                            },
                                        ),
                                        (
                                            Call {
                                                func: (
                                                    Variable(
                                                        "/",
                                                    ),
                                                    Span {
                                                        start: 433,
                                                        end: 439,
                                                    },
                                                ),
                                                args: [
                                                    (
                                                        Number(
                                                            15,
                                                        ),
                                                        Span {
                                                            start: 433,
                                                            end: 435,
                                                        },
                                                    ),
                                                    (
                                                        Number(
                                                            3,
                                                        ),
                                                        Span {
                                                            start: 438,
                                                            end: 439,
                                                        },
                                                    ),
                                                ],
                                            },
                                            Span {
                                                start: 433,
                                                end: 439,
                                            },
                                        ),
                                    ],
                                },
                                Span {
                                    start: 425,
                                    end: 439,
                                },
                            ),
                        ],
                    },
                    span: Span {
                        start: 414,
                        end: 440,
                    },
                },
                HirExpr {
                    [salsa id]: Id(1005),
                    expr: Call {
                        func: (
                            Variable(
                                "print_line",
                            ),
                            Span {
                                start: 445,
                                end: 485,
                            },
                        ),
                        args: [
                            (
                                String(
                                    "Testing string operations:",
                                ),
                                Span {
                                    start: 456,
                                    end: 484,
                                },
                            ),
                        ],
                    },
                    span: Span {
                        start: 445,
                        end: 485,
                    },
                },
                HirExpr {
                    [salsa id]: Id(1006),
                    expr: Call {
                        func: (
                            Variable(
                                "print_line",
                            ),
                            Span {
                                start: 490,
                                end: 525,
                            },
                        ),
                        args: [
                            (
                                String(
                                    "Hello, Tribute World!",
                                ),
                                Span {
                                    start: 501,
                                    end: 524,
                                },
                            ),
                        ],
                    },
                    span: Span {
                        start: 490,
                        end: 525,
                    },
                },
            ],
            span: Span {
                start: 275,
                end: 527,
            },
        },
    },
    main: Some(
        "main",
    ),
}
